--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://drive.google.com/drive/folders/1CHlIud4JI5aeFIjxwYNT8EYazEs3N5bb?usp=sharing">resumelink</a></p>
 	          </div>
           </div>
 
